<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SyaratKetentuanAplikasiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/judul"
                android:textColor="@color/colorBlack"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/penting"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/penting1"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/penting2"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ketentuan_umum"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_umum_1"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_umum_2"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_umum_3"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_umum_4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_umum_5"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/ketentuan_penggunaan_aplikasi"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_1"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_2"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_3"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_4"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_5"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_6"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_7"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_8"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_9"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:justificationMode="inter_word"
                android:text="@string/isi_ketentuan_penggunaan_10"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>